--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Click here to see my resume.
+									Click <a href="/assets/Resume.pdf">here</a> to see my resume.
 								</p>
 							</article>
 
