--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 					<header id="header">
 						<h1>Ryan Shi</h1>
 						<p>Statistics &nbsp;&bull;&nbsp; Computer Science &nbsp;&bull;&nbsp; Computational Biology</p>
+						<p>Click <a href="/Resume.pdf">here</a> to see my resume.</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
