--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<p>Click <a href="/Resume.pdf">here</a> to see my resume.</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/ryancys1234" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="ryancy.shi@mail.utoronto.ca" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
