--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://github.com/ryancys1234" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="ryancy.shi@mail.utoronto.ca" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:ryancy.shi@mail.utoronto.ca" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
