--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header">
 						<h1>Ryan Shi</h1>
 						<p>Statistics &nbsp;&bull;&nbsp; Computer Science &nbsp;&bull;&nbsp; Computational Biology</p>
-						<p><a href="/Resume.pdf">Click here</a> to see my resume.</p>
+						<p><a href="/Resume.pdf">Click here to see my resume.</a></p>
 						<nav>
 							<ul>
 								<li><a href="https://github.com/ryancys1234" class="icon brands fa-github"><span class="label">Github</span></a></li>
