--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Ryan Shi</title>
+<title>Projects</title>
 
 <script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -279,18 +279,27 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Ryan Shi</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>Welcome! I am a rising fourth year Data Science Specialist student at
-the University of Toronto, St. George campus. I am interested in
-statistical and computational approaches to a variety of topics in human
-biology, medicine, and public health. Currently I am rather mediocre and
-my experience is quite limited (rip) but I am trying my best to change
-that. Uh, while also managing to survive.</p>
-<p>Thank you for visiting, and have a nice day / night!</p>
+<p>Note: the titles are clickable.</p>
+<div
+id="identifying-predictors-of-postoperative-blood-related-health-complications"
+class="section level3">
+<h3><a href="https://ryancys1234.github.io/JSC370-Project">Identifying
+predictors of postoperative blood-related health complications</a></h3>
+<p>This was the final project for the course JSC370H1: Data Science II
+offered by the Departments of Computer Science and Statistical
+Sciences.</p>
+</div>
+<div id="linkedout" class="section level3">
+<h3><a
+href="https://github.com/CSC207-2022F-UofT/course-project-linkout">LinkedOut</a></h3>
+<p>This was the final project for the course CSC207H1: Software Design
+offered by the Department of Computer Science.</p>
+</div>
 
 
 
