--- a/projects.html
+++ b/projects.html
@@ -290,15 +290,14 @@ id="identifying-predictors-of-postoperative-blood-related-health-complications"
 class="section level3">
 <h3><a href="https://ryancys1234.github.io/JSC370-Project">Identifying
 predictors of postoperative blood-related health complications</a></h3>
-<p>This was the final project for the course JSC370H1: Data Science II
-offered by the Departments of Computer Science and Statistical
-Sciences.</p>
+<p>This was the final project for the course Data Science II offered by
+the Departments of Computer Science and Statistical Sciences.</p>
 </div>
 <div id="linkedout" class="section level3">
 <h3><a
 href="https://github.com/CSC207-2022F-UofT/course-project-linkout">LinkedOut</a></h3>
-<p>This was the final project for the course CSC207H1: Software Design
-offered by the Department of Computer Science.</p>
+<p>This was the final project for the course Software Design offered by
+the Department of Computer Science.</p>
 </div>
 
 
