--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@ $(document).ready(function () {
 
 
 <p>Welcome! I am a rising fourth year Data Science Specialist student at
-the University of Toronto, St. George campus. I am interested in
-statistical and computational approaches to a variety of topics in human
-biology, medicine, and public health. Currently I am rather mediocre and
-my experience is quite limited (rip) but I am trying my best to change
-that. Uh, while also managing to survive.</p>
+the University of Toronto. I am interested in statistical and
+computational approaches to a variety of topics in human biology,
+medicine, and public health. Currently I am rather mediocre and my
+experience is quite limited (rip) but I am trying my best to change
+that. Uh, while also struggling to survive.</p>
 <p>Thank you for visiting, and have a nice day / night!</p>
 
 
