--- a/projects.html
+++ b/projects.html
@@ -253,6 +253,9 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/Resume.pdf">Resume</a>
+</li>
+<li>
   <a href="mailto:ryancy.shi@mail.utoronto.ca">
     <span class="fa fa-envelope-o fa"></span>
      
