--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@ $(document).ready(function () {
 <li>
   <a href="projects.html">Projects</a>
 </li>
+<li>
+  <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/Resume.pdf">Resume</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/Resume.pdf">Resume</a>
-</li>
-<li>
   <a href="mailto:ryancy.shi@mail.utoronto.ca">
     <span class="fa fa-envelope-o fa"></span>
      
@@ -292,7 +292,7 @@ the University of Toronto. I am interested in statistical and
 computational approaches to a variety of topics in human biology,
 medicine, and public health. Currently I am rather mediocre and my
 experience is quite limited (rip) but I am trying my best to change
-that. Uh, while also struggling to survive.</p>
+that. While also struggling with, uh, everything.</p>
 <p>Thank you for visiting, and have a nice day / night!</p>
 
 
