--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome! I am a rising fourth year Data Science Specialist student at
-the University of Toronto. I am interested in statistical and
-computational approaches to a variety of topics in human biology,
-medicine, and public health. Currently I am rather mediocre and my
-experience is quite limited (rip) but I am trying my best to change
-that. While also struggling with, uh, everything.</p>
+<p>Welcome! I am a fourth year Data Science Specialist student at the
+University of Toronto. I am interested in statistical and computational
+approaches to a variety of topics in human biology, medicine, and public
+health. Currently I am rather mediocre and my experience is quite
+limited (rip) but I am trying my best to change that. While also
+struggling with, uh, everything.</p>
 <p>Thank you for visiting, and have a nice day / night!</p>
 
 
