--- a/index.html
+++ b/index.html
@@ -3,156 +3,19 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academic Website</title>
-
-    <!-- External CSS (Bootstrap for responsive design) -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-        }
-
-        .navbar {
-            margin-bottom: 30px;
-        }
-
-        .hero {
-            background-color: #f4f4f4;
-            padding: 100px 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-        }
-
-        .section-title {
-            margin-top: 50px;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        .footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .content-section {
-            padding: 50px 0;
-        }
-
-        .publication-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .publication-list li {
-            margin-bottom: 10px;
-        }
-    </style>
+    <title>Ryan Shi/title>
 </head>
 
 <body>
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Your Name</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#publications">Publications</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="container">
-            <h1>Welcome to My Academic Website</h1>
-            <p>Explore my research, publications, and contact information.</p>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="content-section">
-        <div class="container">
-            <h2 class="section-title">About Me</h2>
-            <p>Hello! I am a researcher in [Your Field of Study]. My work focuses on [brief description of your research interests]. I have contributed to various projects and publications in [your area of expertise].</p>
-        </div>
-    </section>
-
-    <!-- Publications Section -->
-    <section id="publications" class="content-section bg-light">
-        <div class="container">
-            <h2 class="section-title">Publications</h2>
-            <ul class="publication-list">
-                <li><strong>Title of Paper 1</strong> - Journal Name (Year). <a href="#">Read More</a></li>
-                <li><strong>Title of Paper 2</strong> - Journal Name (Year). <a href="#">Read More</a></li>
-                <li><strong>Title of Paper 3</strong> - Journal Name (Year). <a href="#">Read More</a></li>
-                <li><strong>Title of Paper 4</strong> - Journal Name (Year). <a href="#">Read More</a></li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="content-section">
-        <div class="container">
-            <h2 class="section-title">Contact</h2>
-            <p>If you would like to get in touch, please feel free to reach out through the form below or email me directly at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
-            <form action="#" method="POST">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
-    </footer>
-
-    <!-- External JS (Bootstrap and jQuery) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <h1>Ryan Shi</h1>
+    <a href="mailto:ryancy.shi@mail.utoronto.ca">Email</a> /
+    <a href="Resume.pdf" target="_blank">CV</a> /
+    <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
+    <a href="https://github.com/ryancys1234">GitHub</a> /
+    <p>
+        I am a fourth-year student (Data Science & Statistics) at the University of Toronto. I am interested in statistical and computational approaches to a variety of topics in 
+        human biology, medicine, and public health. I am fortunate to have been advised by 
+    </p>
 </body>
 
 </html>
