--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan Shi/title>
+    <title>Ryan Shi</title>
 </head>
 
 <body>
