--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <a href="mailto:ryancy.shi@mail.utoronto.ca">Email</a> /
     <a href="Resume.pdf" target="_blank">CV</a> /
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
-    <a href="https://github.com/ryancys1234">GitHub</a> /
+    <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
-        I am a fourth-year student (Data Science & Statistics) at the University of Toronto. I am interested in statistical and computational approaches to a variety of topics in 
-        human biology, medicine, and public health. I am fortunate to have been advised by 
+        I am a fourth-year student (Data Science & Statistics) at the University of Toronto.
     </p>
 </body>
 
