--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Ryan Shi</h1>
     <a href="mailto:ryancy.shi@mail.utoronto.ca">Email</a> /
-    <a href="Resume.pdf" target="_blank">CV</a> /
+    <a href="Resume.pdf">CV</a> /
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
-        I am a fourth-year student (Data Science & Statistics) at the University of Toronto.
+        I am a fourth-year student in Data Science and Statistics at the University of Toronto, where I worked with <a href="https://meredithfranklin.github.io">Meredith Franklin</a> on the spatial distributions of brain metastases and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a> on mathematics pedagogy. I have also worked at the <a href="https://acceleration.utoronto.ca/">Acceleration Consortium</a> with <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a> and <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a> and at <a href="https://www.camh.ca">CAMH</a> with <a href="https://www.camh.ca/en/science-and-research/science-and-research-staff-directory/pushpaldesarkar">Pushpal Desarkar</a>.
     </p>
 </body>
 
