--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
-        I am a fourth-year student in Data Science and Statistics at the University of Toronto, where I worked with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, and <a href="https://www.camh.ca/en/science-and-research/science-and-research-staff-directory/pushpaldesarkar">Pushpal Desarkar</a>.
+        I am a fourth-year student in Data Science and Statistics at the University of Toronto, where I am fortunate to have worked with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, and <a href="https://www.camh.ca/en/science-and-research/science-and-research-staff-directory/pushpaldesarkar">Pushpal Desarkar</a>.
     </p>
 </body>
 
