--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Shi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Ryan Shi</h1>
     <a href="mailto:ryancy.shi@mail.utoronto.ca">Email</a> /
-    <a href="Resume.pdf">CV</a> /
+    <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/Resume.pdf">CV</a> /
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
