--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
-        I am a fourth-year student in Data Science and Statistics at the University of Toronto, where I am fortunate to have been able to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
+        I am a fourth-year student in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
     </p>
 </body>
 
