--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Ryan Shi</h1>
-    <a href="mailto:ryancy.shi@mail.utoronto.ca">Email</a> /
+    <a href="mailto:ryancy.shi at mail.utoronto.ca">Email</a> /
     <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/CV.pdf">CV</a> /
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
