--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Ryan Shi</title>
+    <title>Hi! I'm Ryan Shi.</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
-        I am a fourth-year student in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
+        I'm a fourth-year student in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
     </p>
     <h2>Projects</h2>
     <a href="https://ryancys1234.github.io/JSC370-Project">Identifying predictors of postoperative blood-related health complications</a>
