--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hi! I'm Ryan Shi.</title>
+    <title>Ryan Shi</title>
 </head>
 
 <body>
-    <h1>Ryan Shi</h1>
+    <h1>Hi! I'm Ryan Shi.</h1>
     <a href="mailto:ryancy.shi at mail.utoronto.ca">Email</a> /
     <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/CV.pdf">CV</a> /
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
