--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <h1>Hi, I'm Ryan Shi.</h1>
+    <h1>Ryan Shi</h1>
     <a href="mailto:ryancy.shi at mail.utoronto.ca">Email</a> /
     <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/CV.pdf">CV</a> /
     <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
     <a href="https://github.com/ryancys1234">GitHub</a>
     <p>
-        I'm a fourth-year student in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
+        Nice to meet you! I'm a fourth-year student in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
     </p>
     <h2>Projects</h2>
     <a href="https://ryancys1234.github.io/JSC370-Project">Identifying predictors of postoperative blood-related health complications.</a>
