--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Nice to meet you! Previously, I did my undergrad in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
     </p>
     <p>
-        Projects: <a href="https://ryancys1234.github.io/JSC370-Project">Identifying predictors of postoperative blood-related health complications</a>, <a href="https://github.com/ryancys1234/course-project-linkout">LinkedOut</a>.
+        Course projects: <a href="https://ryancys1234.github.io/JSC370-Project">Identifying predictors of postoperative blood-related health complications</a>, <a href="https://github.com/ryancys1234/course-project-linkout">LinkedOut</a>.
     </p>
 </body>
 
