--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <h1>Ryan Shi</h1>
-    <a href="mailto:ryancy.shi at mail.utoronto.ca">Email</a> /
     <a href="https://raw.githubusercontent.com/ryancys1234/ryancys1234.github.io/main/CV.pdf">CV</a> /
-    <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a> /
-    <a href="https://github.com/ryancys1234">GitHub</a>
+    <a href="mailto:ryancy.shi at mail.utoronto.ca">Email</a> /
+    <a href="https://github.com/ryancys1234">GitHub</a> /
+    <a href="https://www.linkedin.com/in/ryan-shi-a7b096215">LinkedIn</a>
     <p>
         Nice to meet you! Previously, I did my undergrad in Data Science and Statistics at the University of Toronto, where I have been fortunate to work on various projects with <a href="https://meredithfranklin.github.io">Meredith Franklin</a>, <a href="https://acceleration.utoronto.ca/researcher/ilya-yakavets">Ilya Yakavets</a>, <a href="https://acceleration.utoronto.ca/researcher/yimu-zhao">Yimu Zhao</a>, and <a href="https://www.math.toronto.edu/zaman">Asif Zaman</a>, among others.
     </p>
